--- a/MLT/knowledge.ipynb
+++ b/MLT/knowledge.ipynb
@@ -32,6 +32,8 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "from HOML_book_ex.ex2 import housing\n",
+    "\n",
     "# Linearly separable data\n",
     "X = np.array([[1, 2], [2, 3], [3, 3], [6, 5], [7, 8], [8, 8]])\n",
     "y = np.array([0, 0, 0, 1, 1, 1])\n",
@@ -369,6 +371,264 @@
     "$$"
    ],
    "id": "5b3deb4a89955e66"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Search for correlation between features and target variable, and between features themselves.}\n",
+    "$$\n",
+    "$$\n",
+    "\\text{Maybe change some features to make them more relevant, for example dividing weight by height to get BMI.}\n",
+    "$$\n"
+   ],
+   "id": "65000154b2141d62"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "corr_matrix = housing.corr()\n",
+    "corr_matrix['median_house_value'].sort_values(ascending=False)\n"
+   ],
+   "id": "eddde73dbadf8f97"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Better Evaluation Using Cross-Validation}\n",
+    "$$"
+   ],
+   "id": "1c869574ff3dbef6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels,\n",
+    "                         scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)\n",
+    "\n",
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\", scores)\n",
+    "    print(\"Mean:\", scores.mean())\n",
+    "    print(\"Standard deviation:\", scores.std())\n",
+    "\n",
+    "display_scores(tree_rmse_scores)\n",
+    "\n"
+   ],
+   "id": "7dcdfc7a6004f3c9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Use pipelines to automate the process of transforming data.}\n",
+    "$$"
+   ],
+   "id": "61b79880a2957faa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "        (\"num\", num_pipeline, num_attribs),\n",
+    "        (\"cat\", OneHotEncoder(), cat_attribs),\n",
+    "    ])\n",
+    "\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ],
+   "id": "53356d4802090695"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Fine-Tune Your Model}\n",
+    "$$"
+   ],
+   "id": "4f0c52ff17c3d7d2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Grid Search}\n",
+    "$$"
+   ],
+   "id": "3be77c62e1ac1ab5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    # try 12 (3×4) combinations of hyperparameters\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    # then try 6 (2×3) combinations with bootstrap set as False\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
+    "  ]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "# train across 5 folds, that's a total of (12+6)*5=90 rounds of training\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                           scoring='neg_mean_squared_error',\n",
+    "                           return_train_score=True)\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ],
+   "id": "c83a6dccb38e5f0c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{Randomized Search}\n",
+    "$$"
+   ],
+   "id": "5de6bd6d02e41755"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "param_distribs = {\n",
+    "        'n_estimators': randint(low=1, high=200),\n",
+    "        'max_features': randint(low=1, high=8),\n",
+    "    }\n",
+    "\n",
+    "forest_reg = RandomForestRegressor(random_state=42)\n",
+    "rnd_search = RandomizedSearchCV(forest_reg, param_distributions=param_distribs,\n",
+    "                                n_iter=10, cv=5, scoring='neg_mean_squared_error', random_state=42)\n",
+    "rnd_search.fit(housing_prepared, housing_labels)"
+   ],
+   "id": "5a712f4807b2c45"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{\n",
+    "Analyze the Best Models and Their Errors}\n",
+    "$$"
+   ],
+   "id": "f892b73367eda1a8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "feature_importances\n",
+    "\n",
+    "array([7.33442355e-02, 6.29090705e-02, 4.11437985e-02, 1.46726854e-02,\n",
+    "       1.41064835e-02, 1.48742809e-02, 1.42575993e-02, 3.66158981e-01,\n",
+    "       5.64191792e-02, 1.08792957e-01, 5.33510773e-02, 1.03114883e-02,\n",
+    "       1.64780994e-01, 6.02803867e-05, 1.96041560e-03, 2.85647464e-03])\n",
+    "\n",
+    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
+    "#cat_encoder = cat_pipeline.named_steps[\"cat_encoder\"] # old solution\n",
+    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ],
+   "id": "5814ace85fac4e5a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "\\text{and more...}\n",
+    "$$\n",
+    "https://github.com/ageron/handson-ml2/blob/master/02_end_to_end_machine_learning_project.ipynb"
+   ],
+   "id": "5e3bf3cedbbf33b9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "\n",
+    "    Tips on Creating Features\n",
+    "    It's good to keep in mind your model's own strengths and weaknesses when creating features. Here are some guidelines:\n",
+    "\n",
+    "        Linear models learn sums and differences naturally, but can't learn anything more complex.\n",
+    "        Ratios seem to be difficult for most models to learn. Ratio combinations often lead to some easy performance gains.\n",
+    "        Linear models and neural nets generally do better with normalized features. Neural nets especially need features scaled to values not too far from 0. Tree-based models (like random forests and XGBoost) can sometimes benefit from normalization, but usually much less so.\n",
+    "        Tree models can learn to approximate almost any combination of features, but when a combination is especially important they can still benefit from having it explicitly created, especially when data is limited.\n",
+    "        Counts are especially helpful for tree models, since these models don't have a natural way of aggregating information across many features at once.\n",
+    "\n"
+   ],
+   "id": "91cbae26b1ba798d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "     PCA Best Practices\n",
+    "    There are a few things to keep in mind when applying PCA:\n",
+    "\n",
+    "        PCA only works with numeric features, like continuous quantities or counts.\n",
+    "        PCA is sensitive to scale. It's good practice to standardize your data before applying PCA, unless you know you have good reason not to.\n",
+    "        Consider removing or constraining outliers, since they can have an undue influence on the results.\n",
+    "\n"
+   ],
+   "id": "d1acbc81518d76e7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "     Use Cases for Target Encoding\n",
+    "    Target encoding is great for:\n",
+    "\n",
+    "        High-cardinality features: A feature with a large number of categories can be troublesome to encode: a one-hot encoding would generate too many features and alternatives, like a label encoding, might not be appropriate for that feature. A target encoding derives numbers for the categories using the feature's most important property: its relationship with the target.\n",
+    "        Domain-motivated features: From prior experience, you might suspect that a categorical feature should be important even if it scored poorly with a feature metric. A target encoding can help reveal a feature's true informativeness.\n",
+    "\n"
+   ],
+   "id": "add5561bb37965d1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "https://www.kaggle.com/code/ryanholbrook/feature-engineering-for-house-prices#Step-4---Hyperparameter-Tuning",
+   "id": "b7778d195d38cbd8"
   }
  ],
  "metadata": {
